--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "vim-files/vim/bundle/Command-T"]
 	path = vim-files/vim/bundle/Command-T
 	url = https://github.com/wincent/Command-T
+[submodule "vim-files/vim/bundle/vim-colors-solarized"]
+	path = vim-files/vim/bundle/vim-colors-solarized
+	url = https://github.com/altercation/vim-colors-solarized.git
